/*
 * This file was generated by the Gradle 'init' task.
 */

apply plugin: 'java'
apply plugin: 'application'



mainClassName = 'App'
sourceCompatibility = 16
targetCompatibility = 16
version = '1.0'

def getVersion=[
    vertxVersion : '4.2.0',
    junitJupiterVersion: '5.7.0'
]


repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
    implementation 'org.springframework.boot:spring-boot-starter:2.5.5'
    implementation 'org.hibernate:hibernate-core:5.5.4.Final'
    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
    // https://mvnrepository.com/artifact/com.enigmabridge/hibernate4-sqlite-dialect
    implementation group: 'com.enigmabridge', name: 'hibernate4-sqlite-dialect', version: '0.1.2'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
    implementation 'org.springframework.boot:spring-boot-starter:2.5.5'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

    implementation platform("io.vertx:vertx-stack-depchain:${getVersion.vertxVersion}")
    implementation 'io.vertx:vertx-core'

    // https://mvnrepository.com/artifact/io.vertx/vertx-web
    implementation group: 'io.vertx', name: 'vertx-web', version: '4.1.5'

    testImplementation("io.vertx:vertx-junit5")
    testImplementation("org.junit.jupiter:junit-jupiter:${getVersion.junitJupiterVersion}")

    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
    // Use JUnit test framework
    testImplementation 'junit:junit:4.13.2'
}

test {
    useJUnitPlatform()
}

tasks.named('jar') {
    manifest {
        attributes('Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Main-Class': 'com.example.app.main.ExampleSpringApplication',
                'Class-Path': configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }
                        .collect { zipTree(it) })
    }

}
targetCompatibility = JavaVersion.VERSION_16

